sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {
  var longueur = getNombreValeurs()
  var NbEch = 0
  for (j <- 0 to longueur-1)
  	var NbEch = 0
  	for (i <- 1 to longueur-1-j){
    	if (plusPetit(i,i-1)){
      	echange(i,i-1)
        NbrEch=NbrEch+1
    }
  }
  if (NbEch== 0){return}
  } 
